dashboard-profilepage-selecteduserprofilepage-search-like-cancellike- finished

--- a/src/main/resources/internationalization/messages_en.properties
+++ b/src/main/resources/internationalization/messages_en.properties
@@ -806,3 +806,6 @@ date = Date
 ### hardwareDataset end ###
 
 #######  APP LANGUAGE END  ########
+
+thereWereNoResults = There were no results
+profilePage = Profile Page
