--- a/src/main/resources/internationalization/messages_tr.properties
+++ b/src/main/resources/internationalization/messages_tr.properties
@@ -806,3 +806,6 @@ date = Tarih
 ### hardwareDataset end ###
 
 #######  APP LANGUAGE END  ########
+
+thereWereNoResults = Sonuç bulunamad\u0131
+profilePage = Profil Sayfas\u0131
